# CW_5_get_vacancies_with_DB

./: .gitignore  README.md  main.py  pyproject.toml
src/: class_DB.py  class_api.py  employers_id.json  utils.py
