[tool.poetry]
name = "cw-5-get-vacancies-with-db"
version = "0.1.0"
description = ""
authors = ["glebokhlopkov <glebka_90@mail.ru>"]
readme = "README.md"
packages = [{include = "cw_5_get_vacancies_with_db"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
